# substrate-playground

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/assets-registry/: Cargo.toml
pallets/assets-registry/src/: lib.rs  traits.rs
pallets/assets-registry/src/rpc/: Cargo.toml
pallets/assets-registry/src/rpc/runtime-api/: Cargo.toml
pallets/assets-registry/src/rpc/runtime-api/src/: lib.rs
pallets/assets-registry/src/rpc/src/: lib.rs
pallets/legacy/: Cargo.toml
pallets/legacy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: governance.rs  lib.rs  xcm_config.rs
