[package]
name = "assets-registry-runtime-api"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }

[features]
default = ["std"]
std = [
    "sp-api/std",
]